# swc-js-plugin

./: Cargo.toml  README.md  package.json  plugin.js  pnpm-lock.yaml
src/: js_plugin.rs  lib.rs  playground.rs
