[package]
name = "swc-js-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[profile.release]
lto = true

[dependencies]
anyhow = "1.0.82"
boa_engine = "0.18.0"
serde = "1"
swc_core = { version = "0.90.34", features = ["ecma_plugin_transform"] }

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
